--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: CI for wichat_0
+name: CI for wichat_es4a
 
 on:
   release:
@@ -16,7 +16,7 @@ jobs:
     - run: npm --prefix users/userservice ci
     - run: npm --prefix llmservice ci
     - run: npm --prefix gatewayservice ci
-    - run: npm --prefix webapp ci
+    - run: npm --prefix webapp ci -- --legacy-peer-deps
     - run: npm --prefix users/authservice test -- --coverage
     - run: npm --prefix users/userservice test -- --coverage
     - run: npm --prefix llmservice test -- --coverage
@@ -41,8 +41,6 @@ jobs:
     - run: npm --prefix webapp install
     - run: npm --prefix webapp run build
     - run: npm --prefix webapp run test:e2e
-      env:
-        LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
@@ -57,7 +55,7 @@ jobs:
       env:
         API_URI: http://${{ secrets.DEPLOY_HOST }}:8000
       with:
-          name: arquisoft/wichat_0/webapp
+          name: arquisoft/wichat_es4a/webapp
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
@@ -77,7 +75,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-          name: arquisoft/wichat_0/authservice
+          name: arquisoft/wichat_es4a/authservice
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
@@ -96,7 +94,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: arquisoft/wichat_0/userservice
+        name: arquisoft/wichat_es4a/userservice
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
@@ -114,7 +112,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: arquisoft/wichat_0/llmservice
+        name: arquisoft/wichat_es4a/llmservice
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
@@ -136,7 +134,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: arquisoft/wichat_0/gatewayservice
+        name: arquisoft/wichat_es4a/gatewayservice
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
@@ -153,6 +151,6 @@ jobs:
         user: ${{ secrets.DEPLOY_USER }}
         key: ${{ secrets.DEPLOY_KEY }}
         command: |
-          wget https://raw.githubusercontent.com/arquisoft/wichat_0/master/docker-compose.yml -O docker-compose.yml
+          wget https://raw.githubusercontent.com/arquisoft/wichat_es4a/master/docker-compose.yml -O docker-compose.yml
           docker compose --profile prod down
           docker compose --profile prod up -d --pull always
