--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,4 +153,5 @@ jobs:
         command: |
           wget https://raw.githubusercontent.com/arquisoft/wichat_es4a/master/docker-compose.yml -O docker-compose.yml
           docker compose --profile prod down
+          echo "LLM_API_KEY=${{ secrets.LLM_API_KEY }}" > .env
           docker compose --profile prod up -d --pull always
